fix: 채팅 websocket 구독 인가 보강